# serena

./: .dockerignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  pyproject.toml
.github/: copilot-instructions.md
.github/workflows/: pytest.yml
.serena/: project.yml
.serena/memories/: razor_cohosting_implementation.md
docs/01-about/: 020_programming-languages.md
docs/02-usage/: 020_running.md  025_jetbrains_plugin.md  030_clients.md  040_workflow.md  050_configuration.md  065_logs.md
docs/03-special-guides/: cpp_setup.md  deferred_tool_loading.md  scala_setup_guide_for_serena.md
src/serena/: agent.py  cli.py  code_editor.py  constants.py  dashboard.py  gui_log_viewer.py  ls_manager.py  mcp.py  project.py  symbol.py
src/serena/config/: context_mode.py  serena_config.py
src/serena/jetbrains/: jetbrains_plugin_client.py  jetbrains_types.py
src/serena/resources/: project.template.yml  serena_config.template.yml
src/serena/tools/: config_tools.py  file_tools.py  jetbrains_plugin_client.py  jetbrains_tools.py  memory_tools.py  symbol_tools.py  tool_categories.py  (+1 more)
src/solidlsp/: ls.py  ls_config.py  ls_exceptions.py  ls_process.py  ls_request.py  ls_utils.py
test/: conftest.py
test/resources/repos/toml/test_repo/: pyproject.toml
test/serena/: test_cli_project_commands.py  test_deferred_loading.py  test_jetbrains_plugin_client.py  test_serena_agent.py  test_set_modes.py  test_symbol.py  test_symbol_editing.py  test_text_utils.py  test_tool_parameter_types.py
test/solidlsp/: test_csharp_lru_cache.py  test_language_id_didopen.py  test_ls_common.py
(+95 files in other folders)
